--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import { Test } from "../components/Test";
+import TestVue from "../components/TestVue.vue";
 ---
 
 <Layout title="Welcome to Astro.">
   <main>
-    <Test />
+    <Test client:visible />
     <h1>Welcome to <span class="text-gradient">Astro</span></h1>
     <p class="instructions">
       To get started, open the directory <code>src/pages</code> in your project.<br
@@ -34,7 +35,24 @@ import { Test } from "../components/Test";
         title="Community"
         body="Come say hi to our amazing Discord community. ❤️"
       />
+      <Card
+        href="https://astro.build/chat/"
+        title="Community"
+        body="Come say hi to our amazing Discord community. ❤️"
+      />
+      <Card
+        href="https://astro.build/chat/"
+        title="Community"
+        body="Come say hi to our amazing Discord community. ❤️"
+      />
+      <Card
+        href="https://astro.build/chat/"
+        title="Community"
+        body="Come say hi to our amazing Discord community. ❤️"
+      />
     </ul>
+    <Test client:visible />
+    <TestVue />
   </main>
 </Layout>
 
