--- a/src/pages/micro.astro
+++ b/src/pages/micro.astro
@@ -1,4 +1,5 @@
 ---
+import { Test } from "../components/Test";
 import Layout from "../layouts/Layout.astro";
 
 const apiUrl = import.meta.env.MICROCMS_SERVICE_DOMAIN;
@@ -9,11 +10,18 @@ const baseHeaders = {
 const response = await fetch(apiUrl, baseHeaders);
 const data = await response.json();
 
-console.log("data: ", data.contents[0]);
+const content: string = data.contents[0].content;
 ---
 
 <Layout title="micro">
   <main>
-    <div>fdf</div>
+    <div class="div">fdf</div>
+    <!-- <Test content={content} /> -->
   </main>
 </Layout>
+
+<style>
+  .div {
+    height: 1000px;
+  }
+</style>
